tests/negative/typecheck/unit_const.orng
// unit_const.orng:6:16: error: symbol `Ident` must start with an lowercase letter
//     const Ident = ()
//               ^
// 
fn main() -> Int {
    const Ident = ()
    const x: Ident = {}
    _ = x
    320
} 